@@ -1,3 +1,8 @@
+2011-01-05  Changpeng Fang  <changpeng.fang@amd.com>
+
+	* config/i386/i386.c (ix86_option_override_internal): Bulldozer
+	processors do not support 3DNow instructions.
+
 2010-07-07  H.J. Lu  <hongjiu.lu@intel.com>
 
 	PR target/44844
